<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.learnjaxrs</groupId>
	<artifactId>learn-webservices-jaxrs</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>learn-webservices-jaxrs</name>
	<description>JAX-RS API</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.1</version>
	</parent>

	<properties>
		<java.version>21</java.version>

		<jakartaee.version>10.0.0</jakartaee.version>
		<microprofile.version>6.0</microprofile.version>

		<!-- Overriding Flyway and Derby Version for Flyway compatibility -->
		<flyway.version>11.1.0</flyway.version>
		<derby.version>10.17.1.0</derby.version>

		<!-- Choose this version to match Apache TomEE -->
		<opentelemetry.version>1.20.1</opentelemetry.version>

		<!-- Testing support -->
		<arquillian.version>1.9.1.Final</arquillian.version>
		<resteasy.version>6.2.11.Final</resteasy.version>
	</properties>

	<modules>
		<module>learn-webservices-jaxrs-server</module>
		<module>learn-webservices-jaxrs-stubs</module>
		<module>learn-webservices-jaxrs-client</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.platform</groupId>
				<artifactId>jakarta.jakartaee-bom</artifactId>
				<version>${jakartaee.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.microprofile</groupId>
				<artifactId>microprofile</artifactId>
				<version>${microprofile.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>${arquillian.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
